--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <title>Lingayen Church of Christ</title>
     <link rel="stylesheet" href="../static/css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <base href="/">
 </head>
 
 <body>
